src/stylesheets/components/_toolbar.scss
//
// Toolbar
// --------------------------------------------------

.toolbar {
  display: flex;
  justify-content: space-between;
  height: $toolbar-height;
  flex: 0 0 auto;
  padding: 0 $default-padding-horizontal;
  overflow: hidden;

  &.titlebar {
    .is-blurred & {
      > * {
        @if $platform == darwin {
          opacity: $toolbar-blurred-opacity-darwin;

          @if $theme == light {
            mix-blend-mode: multiply;
          }
        }
      }
    }
  }

  .panel-header & {
    flex: 1 1 auto;
    height: $panel-header-height;
  }

  .toolbar-context {
    position: absolute;
    left: $default-padding-horizontal;
    right: $default-padding-horizontal;
    height: $toolbar-height;
    display: flex;
    justify-content: space-between;
    transform: translate(0, 100%); // translate3d clips box-shadow
    transition: transform $toolbar-context-transition;

    &.default,
    &.has-active {
      transform: translate(0, -100%);
    }

    &.active {
      transform: translate(0, 0);
    }
  }

  .toolbar-left,
  .toolbar-center,
  .toolbar-right {
    display: flex;
    align-items: center;
  }

  .toolbar-left,
  .toolbar-right {
    flex: 1 0 0;
  }

  .toolbar-center {
    flex: 0 0 auto;
  }

  .toolbar-right {
    justify-content: flex-end;
  }

  .tool-group {
    white-space: nowrap;

    & + .tool-group {
      margin-left: $space-xs - 2 * $shim;

      .panel & {
        margin-left: $space-min - 2 * $shim;
      }
    }
  }

  .btn-icon {
    &:hover {
      background-color: $btn-icon-hover-bg;
    }

    &:active,
    &.active {
      background-color: $btn-icon-active-bg;
    }

    .icon {
      @include state(".btn-icon:active", ".btn-icon.active") {
        color: $btn-icon-active-color;
      }
    }

    & + .btn-icon {
      margin-left: $space-min / 2;
    }
  }

  nav {
    width: 100%;
  }

  .icon + h4 {
    margin-left: $space-xs;
  }
}

